bin_PROGRAMS = tcpserver tcpclient my_adduser


tcpserver_SOURCES = server_main.cpp PasswdMgr.cpp FileDesc.cpp Server.cpp TCPServer.cpp TCPConn.cpp strfuncts.cpp
tcpserver_LDFLAGS = -largon2

tcpclient_SOURCES = client_main.cpp Client.cpp FileDesc.cpp TCPClient.cpp strfuncts.cpp

my_adduser_SOURCES = adduser_main.cpp PasswdMgr.cpp FileDesc.cpp strfuncts.cpp
my_adduser_LDFLAGS = -largon2
